# dine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dine/: __init__.py  feature_store.py  redis_store.py  structs.py  sync_bridge.py
dine/stores/: file_store.py  redis_store.py
tests/: models.py  test_entity.py  test_feature_store.py  test_redis_store.py
